--- a/resource/config.toml
+++ b/resource/config.toml
@@ -1,1 +1,39 @@
+[core]
+start_file = "main"
+start_function = "start"
 thread_size = 4
+service_path = ""
+
+[logging]
+level = "DEBUG"
+file_path = "/"
+
+[gate]
+port = 8080
+
+# [datasource]
+# type = mysql
+# url = "jdbc:mysql://192.168.0.1:3306/mydb"
+# username = ""
+# password = ""
+
+# [redis]
+# host: 192.168.0.120
+# # 端口，默认为6379
+# port: 6379
+# # 数据库索引
+# database: 0
+# # 密码
+# password: starthope
+# # 连接超时时间
+# timeout: 10s
+# lettuce:
+#   pool:
+#     # 连接池中的最小空闲连接
+#     min-idle: 0
+#     # 连接池中的最大空闲连接
+#     max-idle: 8
+#     # 连接池的最大数据库连接数
+#     max-active: 8
+#     # #连接池最大阻塞等待时间（使用负值表示没有限制）
+#     max-wait: -1ms
